# dukeo

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  migrate.py  pyproject.toml  schema.sql
.github/workflows/: ci.yml
dukeo/: config.py  main.py  models.py  requirements.txt
dukeo/routes/: telegram_listener.py  tv_webhook.py
dukeo/services/: alert.py  logger.py  octobot.py  risk.py
tests/: test_octobot.py  test_risk.py  test_tv_webhook.py
